[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 2.0
margin_right = 7.0
margin_bottom = 2.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 331.0
margin_top = 213.0
margin_right = 941.0
margin_bottom = 477.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="VBoxContainer"]
position = Vector2( 339, 143 )
current = true

[node name="Pantano" type="Button" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 610.0
margin_bottom = 106.0
focus_neighbour_top = NodePath("../Voltar")
text = "Pantano"

[node name="Deserto" type="Button" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 610.0
margin_bottom = 130.0
text = "Deserto"

[node name="Medieval" type="Button" parent="VBoxContainer"]
margin_top = 134.0
margin_right = 610.0
margin_bottom = 154.0
text = "Medieval"

[node name="Voltar" type="Button" parent="VBoxContainer"]
margin_top = 158.0
margin_right = 610.0
margin_bottom = 178.0
focus_neighbour_bottom = NodePath("../Pantano")
text = "Voltar"

[connection signal="pressed" from="VBoxContainer/Pantano" to="." method="_on_Pantano_pressed"]
[connection signal="pressed" from="VBoxContainer/Deserto" to="." method="_on_Deserto_pressed"]
[connection signal="pressed" from="VBoxContainer/Medieval" to="." method="_on_Medieval_pressed"]
[connection signal="pressed" from="VBoxContainer/Voltar" to="." method="_on_Voltar_pressed"]
